--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   xmlns:o="urn:schemas-microsoft-com:office:office">
 
 <head>
-  <title>New! £5 if a new player scores on CHE v LIV</title>
+  <title>NEWNEW</title>
   <!--[if !mso]><!-->
     
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
