--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
       <script src="https://unpkg.com/leaflet@0.7.7/dist/leaflet.js"></script>
       <!--Fontawesome CDN-->
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" integrity="sha512-Avb2QiuDEEvB4bZJYdft2mNjVShBftLdPG8FJ0V7irTLQ8Uo0qcPxh4Plq7G5tGm0rU+1SPhVotteLpBERwTkw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+      <!-- jQuery CDN -->
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     </head>
 <body>
 
@@ -26,7 +28,7 @@
         <option value="sattelite">Sattelite</option>
       </select> -->
         <div class="submit-form">
-          <input type="text" id="InField">
+          <input type="text" id="InField" placeholder="Search for any IP address or domain">
           <button type="submit" id="submitField" onclick="getip()">
             <i class="fa-solid fa-chevron-right" style="color: #ffffff; font-size: 15px;"></i>
           </button>
